<?xml version="1.0"?>
<package format="2">
  <name>ros_tutorial</name>
  <version>0.0.0</version>
  <description>
    Package for ROS Tutorial
  </description>
  <license>Apache 2.0</license>
    <maintainer email="bycw@uw.edu">Benjamin Wong</maintainer>
    <depend>catkin</depend>
  <depend>roscpp</depend>
    <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
